# amcp-pylib

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  demo.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  python-publish.yml
amcp_pylib/: __init__.py  exceptions.py
amcp_pylib/core/: __init__.py  client.py  client_async.py  client_base.py  command.py  connection.py  connection_async.py  connection_base.py
amcp_pylib/core/syntax/: __init__.py  command_argument.py  command_group.py  command_group_or.py  parser.py  scanner.py  token.py  token_types.py
amcp_pylib/module/: __init__.py  basic.py  data.py  mixer.py  query.py  template.py  thumbnail.py
amcp_pylib/response/: __init__.py  base.py  client_error_response.py  response_base.py  response_factory.py  success_response.py
amcp_pylib/response/types/: __init__.py  client_error_response.py  info_response.py  server_error_response.py  success_response.py
amcp_pylib/tests/: test_core_syntax_scanner.py  test_core_syntax_state.py
core/: client.py  command.py
core/syntax/: __init__.py  command_argument.py  command_group.py  command_group_or.py  generator.py  parser.py  scanner.py  token.py  token_types.py
docs/: public-api.md
module/: __init__.py  basic.py  data.py  mixer.py  query.py  template.py  thumbnail.py
response/: base.py  factory.py  info_response.py  parser.py  server_error_response.py
tests/: test_command_serialization.py  test_connection_framing.py  test_core_command_state.py  test_core_syntax_parser.py  test_core_syntax_scanner.py  test_response_parser.py
