[build-system]
requires = ["setuptools>=77.0.3", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amcp-pylib"
description = "AMCP (Advanced Media Control Protocol) Client Library"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    { name = "Daniel Dolejska", email = "dolejskad@gmail.com" },
]
requires-python = ">=3.9"
keywords = ["amcp", "casparcg", "client", "video"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7,<9"]
build = ["build>=1", "setuptools-scm>=8", "twine>=6"]
dev = ["build>=1", "pytest>=7,<9", "setuptools-scm>=8", "twine>=6"]

[project.urls]
Homepage = "https://github.com/dolejska-daniel/amcp-pylib"
Repository = "https://github.com/dolejska-daniel/amcp-pylib"
Issues = "https://github.com/dolejska-daniel/amcp-pylib/issues"
Changelog = "https://github.com/dolejska-daniel/amcp-pylib/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["amcp_pylib*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["amcp_pylib/tests"]
