[build-system]
requires = ["setuptools>=77.0.3", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amcp-pylib"
description = "AMCP (Advanced Media Control Protocol) Client Library"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    { name = "Daniel Dolejska", email = "dolejskad@gmail.com" },
]
requires-python = ">=3.9"
keywords = ["amcp", "casparcg", "client", "video"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7,<9"]
build = ["build>=1", "setuptools-scm>=8", "twine>=6"]
lint = ["ruff>=0.8"]
dev = ["build>=1", "pytest>=9.0.3,<10", "ruff>=0.8", "setuptools-scm>=8", "twine>=6"]

[project.urls]
Homepage = "https://github.com/dolejska-daniel/amcp-pylib"
Repository = "https://github.com/dolejska-daniel/amcp-pylib"
Issues = "https://github.com/dolejska-daniel/amcp-pylib/issues"
Changelog = "https://github.com/dolejska-daniel/amcp-pylib/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["amcp_pylib*"]
exclude = ["amcp_pylib.tests*"]

[tool.setuptools.package-data]
amcp_pylib = ["py.typed"]

[tool.setuptools_scm]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
# Keep the initial lint gate narrow so it catches syntax errors, import mistakes, and undefined names without forcing a broad style rewrite.
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
# This package module intentionally re-exports command factories from category modules as a compatibility-friendly public API.
"amcp_pylib/module/__init__.py" = ["F403", "F405"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
